--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  http: ^0.12.0+4
+  flutter_spinkit: ^4.1.1
 
 dev_dependencies:
   flutter_test:
